--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
       <div class="main-inner">
         <section class="contact on" id="main-ct">
           <h3>CONTACT</h3>
+          <!-- <h3>이가영</h3> -->
           <div class="sec">
             <div class="contact-img"></div>
             <address class="contact">
@@ -66,231 +67,188 @@
           <h3>PROJECT</h3>
           <ul class="sec list">
             <li>
-              <strong>머니부</strong>
-              <div class="close-btn">
-                <span class="line"></span>
-                <span class="line"></span>
-                <span class="line"></span>
-              </div>
+              <strong>머니부</strong>       
               <div class="sec-container">
-                <div class="sec-img">스크린샷이 나올자리</div>
+                <div class="sec-img"></div>
                 <div class="content">
                   <p class="sec-explain">해당 내용 설명</p>
-                  <a href="#" target="_blank">결과물 주소</a>
+                  <a href="https://elated-albattani-035181.netlify.app" target="_blank">결과물 주소</a>
+                  <a href="#" target="_blank">code.js</a>
                 </div>
               </div>
             </li>
           </ul>
-          <i  class="scroll" href="#"><span></span><span></span><span></span></i>
+          <div class="close-btn">
+            <span class="line"></span>
+            <span class="line"></span>
+          </div>
+          <!-- <i  class="scroll" href="#"><span></span><span></span><span></span></i> -->
         </section>
         <section class="vanilla-js" id="main-van">
           <h3>VANILLA.JS</h3>
           <ul class="sec list">
             <li>
               <strong>todolist</strong>
-              <div class="close-btn">
-                <span class="line"></span>
-                <span class="line"></span>
-                <span class="line"></span>
-              </div>
               <div class="sec-container">
-                <div class="sec-img">스크린샷이 나올자리</div>
+                <div class="sec-img"></div>
                 <div class="content ">
                   <p class="sec-explain">해당 내용 설명</p>
                   <a href="#" target="_blank">결과물 주소</a>
+                  <a href="#" target="_blank">code.js</a>
                 </div>
               </div>
             </li>
             <li>
               <strong>그림판</strong>
-              <div class="close-btn">
-                <span class="line"></span>
-                <span class="line"></span>
-                <span class="line"></span>
-              </div>
               <div class="sec-container">
-                <div class="sec-img">스크린샷이 나올자리</div>
+                <div class="sec-img"></div>
                 <div class="content">
                   <p class="sec-explain">해당 내용 설명</p>
                   <a href="#" target="_blank">결과물 주소</a>
+                  <a href="#" target="_blank">code.js</a>
                 </div>
               </div>
             </li>
             <li>
               <strong>구글페이지</strong>
-              <div class="close-btn">
-                <span class="line"></span>
-                <span class="line"></span>
-                <span class="line"></span>
-              </div>
               <div class="sec-container">
-                <div class="sec-img">스크린샷이 나올자리</div>
+                <div class="sec-img"></div>
                 <div class="content">
                   <p class="sec-explain">해당 내용 설명</p>
                   <a href="#" target="_blank">결과물 주소</a>
+                  <a href="#" target="_blank">code.js</a>
                 </div>
               </div>
             </li>
             <li>
               <strong>js-challenge</strong>
-              <div class="close-btn">
-                <span class="line"></span>
-                <span class="line"></span>
-                <span class="line"></span>
-              </div>
               <div class="sec-container">
-                <div class="sec-img">스크린샷이 나올자리</div>
+                <div class="sec-img"></div>
                 <div class="content">
                   <p class="sec-explain">해당 내용 설명</p>
                   <a href="#" target="_blank">결과물 주소</a>
+                  <a href="#" target="_blank">code.js</a>
                 </div>
               </div>
             </li>
             <li>
               <strong>생명보험</strong>
-              <div class="close-btn">
-                <span class="line"></span>
-                <span class="line"></span>
-                <span class="line"></span>
-              </div>
               <div class="sec-container">
-                <div class="sec-img">스크린샷이 나올자리</div>
+                <div class="sec-img"></div>
                 <div class="content">
                   <p class="sec-explain">해당 내용 설명</p>
-                  <a href="#" target="_blank">결과물 주소</a>
+                  <a href="./K-Life insurance/" target="_blank">결과물 주소</a>
+                  <a href="#" target="_blank">code.js</a>
                 </div>
               </div>
             </li>
             <li>
               <strong>제니퍼</strong>
-              <div class="close-btn">
-                <span class="line"></span>
-                <span class="line"></span>
-                <span class="line"></span>
-              </div>
               <div class="sec-container">
-                <div class="sec-img">스크린샷이 나올자리</div>
+                <div class="sec-img"></div>
                 <div class="content">
                   <p class="sec-explain">해당 내용 설명</p>
-                  <a href="#" target="_blank">결과물 주소</a>
+                  <a href="./jenniferSoft/index.html" target="_blank">결과물 주소</a>
+                  <a href="#" target="_blank">code.js</a>
                 </div>
               </div>
             </li>
             <li>
               <strong>마이크로소프트</strong>
-              <div class="close-btn">
-                <span class="line"></span>
-                <span class="line"></span>
-                <span class="line"></span>
-              </div>
               <div class="sec-container">
-                <div class="sec-img">스크린샷이 나올자리</div>
+                <div class="sec-img"></div>
                 <div class="content">
                   <p class="sec-explain">해당 내용 설명</p>
-                  <a href="./Microsoft/index.html" target="_blank">결과물 주소</a>
+                  <a href="./Microsoft/index.html" type ="" target="_blank">결과물 주소</a>
+                  <a href="#" target="_blank">code.js</a>
                 </div>
               </div>
             </li>
             <li>
               <strong>카카오페이지</strong>
-              <div class="close-btn">
-                <span class="line"></span>
-                <span class="line"></span>
-                <span class="line"></span>
-              </div>
               <div class="sec-container">
-                <div class="sec-img">스크린샷이 나올자리</div>
+                <div class="sec-img"></div>
                 <div class="content">
                   <p class="sec-explain">해당 내용 설명</p>
                   <a href="./kakao/index.html" target="_blank">결과물 주소</a>
+                  <a href="#" target="_blank">code.js</a>
                 </div>
               </div>
             </li>
           </ul>
-          <i  class="scroll"><span></span><span></span><span></span></i>
+          <div class="close-btn">
+            <span class="line"></span>
+            <span class="line"></span>
+          </div>
+          <!-- <i  class="scroll"><span></span><span></span><span></span></i> -->
         </section>
         <section class="vue-js" id="main-vue">
           <h3>VUE.JS</h3>
           <ul class="sec list">      
             <li>
               <strong>weather</strong>
-              <div class="close-btn">
-                <span class="line"></span>
-                <span class="line"></span>
-                <span class="line"></span>
-              </div>
               <div class="sec-container">
-                <div class="sec-img">스크린샷이 나올자리</div>
+                <div class="sec-img"></div>
                 <div class="content">
                   <p class="sec-explain">해당 내용 설명</p>
-                  <a href="#">결과물 주소</a>
+                  <a href="#" target="_blank">결과물 주소</a>
+                  <a href="#" target="_blank">code.vue</a>
                 </div>
               </div>
             </li>
             <li>
               <strong>movie</strong>
-              <div class="close-btn">
-                <span class="line"></span>
-                <span class="line"></span>
-                <span class="line"></span>
-              </div>
               <div class="sec-container">
-                <div class="sec-img">스크린샷이 나올자리</div>
+                <div class="sec-img"></div>
                 <div class="content">
                   <p class="sec-explain">해당 내용 설명</p>
                   <a href="#" target="_blank">결과물 주소</a>
+                  <a href="#" target="_blank">code.vue</a>
                 </div>
               </div>
             </li>
             <li>
               <strong>hacke-news</strong>
-              <div class="close-btn">
-                <span class="line"></span>
-                <span class="line"></span>
-                <span class="line"></span>
-              </div>
               <div class="sec-container">
-                <div class="sec-img">스크린샷이 나올자리</div>
+                <div class="sec-img"></div>
                 <div class="content">
                   <p class="sec-explain">해당 내용 설명</p>
                   <a href="#" target="_blank">결과물 주소</a>
+                  <a href="#" target="_blank">code.vue</a>
                 </div>
               </div>
             </li>
             <li>
               <strong>game</strong>
-              <div class="close-btn">
-                <span class="line"></span>
-                <span class="line"></span>
-                <span class="line"></span>
-              </div>
               <div class="sec-container">
-                <div class="sec-img">스크린샷이 나올자리</div>
+                <div class="sec-img"></div>
                 <div class="content">
                   <p class="sec-explain">해당 내용 설명</p>
                   <a href="#" target="_blank">결과물 주소</a>
+                  <a href="#" target="_blank">code.vue</a>
                 </div>
               </div>
             </li>
             <li>
               <strong>todolist</strong>
-              <div class="close-btn">
-                <span class="line"></span>
-                <span class="line"></span>
-                <span class="line"></span>
-              </div>
               <div class="sec-container">
-                <div class="sec-img">스크린샷이 나올자리</div>
+                <div class="sec-img"></div>
                 <div class="content">
                   <p class="sec-explain">해당 내용 설명</p>
                   <a href="#" target="_blank">결과물 주소</a>
+                  <a href="#" target="_blank">code.vue</a>
                 </div>
               </div>
             </li>
           </ul>
-          <i  class="scroll" href="#"><span></span><span></span><span></span></i>
+          <div class="close-btn">
+            <span class="line"></span>
+            <span class="line"></span>
+          </div>
+          <!-- <i  class="scroll" href="#"><span></span><span></span><span></span></i> -->
         </section>
       </div>
+      <!-- <i  class="scroll" href="#"><span></span><span></span><span></span></i> -->
     </main>
   </div>
   <script src="./js/loading.js"></script>
