--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
                 <div class="sec-img"></div>
                 <div class="content">
                   <p class="sec-explain">해당 내용 설명</p>
-                  <a href="https://elated-albattani-035181.netlify.app" target="_blank">결과물 주소</a>
-                  <a href="#" target="_blank">#code.vue</a>
+                  <a href="#" target="_blank">#  vue</a>
+                  <a class="sec-btn" href="https://elated-albattani-035181.netlify.app" target="_blank">click me</a>
                 </div>
               </div>
             </li>
@@ -117,12 +117,12 @@
                 <div class="sec-img"></div>
                 <div class="content ">
                   <p class="sec-explain">해당 내용 설명</p>
-                  <a href="#" target="_blank">구경하기</a>
                   <div class="code-box">
                     <a href="#" target="_blank"># html</a>
                     <a href="#" target="_blank"># js</a>
                     <a href="#" target="_blank"># css</a>
                   </div>
+                  <a class="sec-btn" href="#" target="_blank">click me</a>
                 </div>
               </div>
             </li>
@@ -132,12 +132,12 @@
                 <div class="sec-img"></div>
                 <div class="content">
                   <p class="sec-explain">해당 내용 설명</p>
-                  <a href="./vanilla//paint-JS/index.html" target="_blank">구경하기</a>
                   <div class="code-box">
                     <a href="https://github.com/gay0ung/gay0ung.github.io/blob/master/vanilla/paint-JS/index.html" target="_blank"># html</a>
                     <a href="https://github.com/gay0ung/gay0ung.github.io/blob/master/vanilla/paint-JS/app.js" target="_blank"># js</a>
                     <a href="https://github.com/gay0ung/gay0ung.github.io/blob/master/vanilla/paint-JS/css/style.css" target="_blank"># css</a>
                   </div>
+                  <a class="sec-btn" href="./vanilla//paint-JS/index.html" target="_blank">click me</a>
                 </div>
               </div>
             </li>
@@ -147,12 +147,12 @@
                 <div class="sec-img"></div>
                 <div class="content">
                   <p class="sec-explain">해당 내용 설명</p>
-                  <a href="#" target="_blank">구경하기</a>
                   <div class="code-box">
                     <a href="#" target="_blank"># html</a>
                     <a href="#" target="_blank"># js</a>
                     <a href="#" target="_blank"># css</a>
                   </div>
+                  <a class="sec-btn" href="#" target="_blank">click me</a>
                 </div>
               </div>
             </li>
@@ -162,12 +162,12 @@
                 <div class="sec-img"></div>
                 <div class="content">
                   <p class="sec-explain">해당 내용 설명</p>
-                  <a href="#" target="_blank">구경하기</a>
                   <div class="code-box">
                     <a href="#" target="_blank"># html</a>
                     <a href="#" target="_blank"># js</a>
                     <a href="#" target="_blank"># css</a>
                   </div>
+                  <a class="sec-btn" href="#" target="_blank">click me</a>
                 </div>
               </div>
             </li>
@@ -177,12 +177,12 @@
                 <div class="sec-img"></div>
                 <div class="content">
                   <p class="sec-explain">해당 내용 설명</p>
-                  <a href="https://gay0ung.github.io/" target="_blank">구경하기</a>
                   <div class="code-box">
                     <a href="#" target="_blank"># html</a>
                     <a href="#" target="_blank"># js</a>
                     <a href="#" target="_blank"># css</a>
                   </div>
+                  <a class="sec-btn" href="https://gay0ung.github.io/" target="_blank">click me</a>
                 </div>
               </div>
             </li>
@@ -192,12 +192,12 @@
                 <div class="sec-img"></div>
                 <div class="content">
                   <p class="sec-explain">해당 내용 설명</p>
-                  <a href="./K-Life insurance/" target="_blank">구경하기</a>
                   <div class="code-box">
                     <a href="https://github.com/gay0ung/gay0ung.github.io/blob/master/K-Life%20insurance/index.html" target="_blank"># html</a>
                     <a href="https://github.com/gay0ung/gay0ung.github.io/blob/master/K-Life%20insurance/js/index.js" target="_blank"># js</a>
                     <a href="https://github.com/gay0ung/gay0ung.github.io/tree/master/K-Life%20insurance/css" target="_blank"># css</a>
                   </div>
+                  <a class="sec-btn" href="./K-Life insurance/" target="_blank">click me</a>
                 </div>
               </div>
             </li>
@@ -207,12 +207,12 @@
                 <div class="sec-img"></div>
                 <div class="content">
                   <p class="sec-explain">해당 내용 설명</p>
-                  <a href="./jenniferSoft/index.html" target="_blank">구경하기</a>
                   <div class="code-box">
                     <a href="https://github.com/gay0ung/gay0ung.github.io/blob/master/jenniferSoft/index.html" target="_blank"># html</a>
                     <a href="https://github.com/gay0ung/gay0ung.github.io/blob/master/jenniferSoft/js/main.js" target="_blank"># js</a>
                     <a href="https://github.com/gay0ung/gay0ung.github.io/blob/master/jenniferSoft/css/common.css" target="_blank"># css</a>
                   </div>
+                  <a class="sec-btn" href="./jenniferSoft/index.html" target="_blank">click me</a>
                 </div>
               </div>
             </li>
@@ -222,12 +222,12 @@
                 <div class="sec-img"></div>
                 <div class="content">
                   <p class="sec-explain">해당 내용 설명</p>
-                  <a href="./Microsoft/index.html" type ="" target="_blank">구경하기</a>
                   <div class="code-box">
                     <a href="https://github.com/gay0ung/gay0ung.github.io/blob/master/Microsoft/index.html" target="_blank"># html</a>
                     <a href="https://github.com/gay0ung/gay0ung.github.io/blob/master/Microsoft/js/index.js" target="_blank"># js</a>
                     <a href="https://github.com/gay0ung/gay0ung.github.io/tree/master/Microsoft/css" target="_blank"># css</a>
                   </div>
+                  <a class="sec-btn" href="./Microsoft/index.html" type="" target="_blank">click me</a>
                 </div>
               </div>
             </li>
@@ -237,12 +237,12 @@
                 <div class="sec-img"></div>
                 <div class="content">
                   <p class="sec-explain">해당 내용 설명</p>
-                  <a href="./kakao/index.html" target="_blank">구경하기</a>
                   <div class="code-box">
                     <a href="https://github.com/gay0ung/gay0ung.github.io/blob/master/kakao/index.html" target="_blank"># html</a>
                     <a href="https://github.com/gay0ung/gay0ung.github.io/blob/master/kakao/js/kakao_main_js.js" target="_blank"># js</a>
                     <a href="https://github.com/gay0ung/gay0ung.github.io/blob/master/kakao/css/common.css" target="_blank"># css</a>
                   </div>
+                  <a class="sec-btn" href="./kakao/index.html" target="_blank">click me</a>
                 </div>
               </div>
             </li>
@@ -262,8 +262,8 @@
                 <div class="sec-img"></div>
                 <div class="content">
                   <p class="sec-explain">해당 내용 설명</p>
-                  <a href="https://eloquent-lumiere-dd3402.netlify.app/#/" target="_blank">결과물 주소</a>
-                  <a href="#" target="_blank"># code.vue</a>
+                  <a href="#" target="_blank">#  vue</a>
+                  <a class="sec-btn" href="#" target="_blank">click me</a>
                 </div>
               </div>
             </li>
@@ -273,8 +273,8 @@
                 <div class="sec-img"></div>
                 <div class="content">
                   <p class="sec-explain">해당 내용 설명</p>
-                  <a href="#" target="_blank">결과물 주소</a>
-                  <a href="#" target="_blank">#code.vue</a>
+                  <a href="#" target="_blank">#  vue</a>
+                  <a class="sec-btn" href="#" target="_blank">click me</a>
                 </div>
               </div>
             </li>
@@ -284,8 +284,8 @@
                 <div class="sec-img"></div>
                 <div class="content">
                   <p class="sec-explain">해당 내용 설명</p>
-                  <a href="#" target="_blank">결과물 주소</a>
-                  <a href="#" target="_blank">#code.vue</a>
+                  <a href="#" target="_blank">#  vue</a>
+                  <a class="sec-btn" href="#" target="_blank">click me</a>
                 </div>
               </div>
             </li>
@@ -294,9 +294,9 @@
               <div class="sec-container">
                 <div class="sec-img"></div>
                 <div class="content">
-                  <p class="sec-explain">해당 내용 설명</p>
-                  <a href="#" target="_blank">결과물 주소</a>
-                  <a href="#" target="_blank">#code.vue</a>
+                  <p class="sec-explain">해당 내용 설명</p>          
+                  <a href="#" target="_blank"># vue</a>
+                  <a class="sec-btn" href="#" target="_blank">click me</a>
                 </div>
               </div>
             </li>
@@ -306,8 +306,8 @@
                 <div class="sec-img"></div>
                 <div class="content">
                   <p class="sec-explain">해당 내용 설명</p>
-                  <a href="#" target="_blank">결과물 주소</a>
-                  <a href="#" target="_blank">#code.vue</a>
+                  <a href="#" target="_blank"># vue</a>
+                  <a class="sec-btn" href="#" target="_blank">click me</a>
                 </div>
               </div>
             </li>
