--- a/index.html
+++ b/index.html
@@ -59,31 +59,33 @@
             <li>
               <strong><i class="t-logo"></i>JavaScript</strong>
               <b>ES6</b>
-              <span>contetn</span>
+              <span>
+                ES6, ES2020 문법을 이해하고, 이를 기반으로 코드를 구현 할줄 압니다.
+              </span>
               <b>Vanilla Javascript</b>
-              <span>contetn</span>
+              <span>플러그인을 사용하지 않고 순수한 자바스크립트로 DOM을 제어하고 코드를 구현 할수 있으며, 다양한 라이브러리와 프레임 워크 사용을 위해 인강, 책, 구글링, 알고리즘을 꾸준히 공부하며 활용 할줄 압니다. </span>
             </li>
             <li>
               <strong><i class="t-logo"></i>HTML</strong>
               <b>HTML5</b>
-              <span>content</span>
+              <span>웹표준, 웹접근성을 준수하여 마크업을 하고 검색엔진 최적화(SEO)를 고려하여 가독성과 효율성에 맞게 태그를 사용합니다. </span>
             </li>
             <li>
               <strong><i class="t-logo"></i>CSS</strong>
               <b>CSS3</b>
-              <span>content</span>
-              <b>SCSS</b>
-              <span>content</span>
+              <span>
+                애니메이션과 미디어쿼리를 사용해 반응형 웹사이트를 구현할수 있으며, 유지보수성에 중점을 둔 코드를 구현합니다.
+              </span>
             </li>
             <li>
               <strong><i class="t-logo"></i>Vue.js</strong>
               <b>Vue.js</b>
-              <span>content</span>
+              <span>JavaScript 기반으로 작동하는 프레임워크로 vue.js의 생성주기를 이용해 데이터를 동적으로 사용하고, 라우터를 활용해 SPA 웹페이지를 구현할수 있습니다.</span>
             </li>
             <li>
               <strong><i class="t-logo"></i>git</strong>
               <b>Git/Github</b>
-              <span>content</span>
+              <span>git을 이용해 버전관리와 협업을 할수 있습니다.</span>
             </li>
           </ul>
         </section>
