update media query

--- a/index.html
+++ b/index.html
@@ -35,9 +35,12 @@
           <li><button type="button">technique</button></li>
           <li><button type="button">main project</button></li>
           <li><button type="button">sub project</button></li>
-          <!-- <li><button type="button">vue.js</button></li> -->
         </ul>
       </nav>
+      <div id="hNavBtn">
+        <span class="line"></span>
+        <span class="line"></span>
+      </div>
     </header>
     <main>
       <div class="main-inner">
@@ -98,7 +101,7 @@
                 <div class="sec-img"></div>
                 <div class="content">
                   <p class="sec-explain">해당 내용 설명</p>
-                  <a href="#" target="_blank">#  vue</a>
+                  <a  class="code" href="#" target="_blank"># vue</a>
                   <a class="sec-btn" href="https://elated-albattani-035181.netlify.app" target="_blank">click me</a>
                 </div>
               </div>
@@ -288,7 +291,7 @@
                     <div class="sec-img"></div>
                     <div class="content">
                       <p class="sec-explain">해당 내용 설명</p>
-                      <a href="#" target="_blank"># vue</a>
+                      <a  class="code" href="#" target="_blank"># vue</a>
                       <a class="sec-btn" href="#" target="_blank">click me</a>
                     </div>
                   </div>
@@ -299,7 +302,7 @@
                     <div class="sec-img"></div>
                     <div class="content">
                       <p class="sec-explain">해당 내용 설명</p>
-                      <a href="#" target="_blank"># vue</a>
+                      <a  class="code" href="#" target="_blank"># vue</a>
                       <a class="sec-btn" href="#" target="_blank">click me</a>
                     </div>
                   </div>
@@ -310,7 +313,7 @@
                     <div class="sec-img"></div>
                     <div class="content">
                       <p class="sec-explain">해당 내용 설명</p>
-                      <a href="#" target="_blank"># vue</a>
+                      <a  class="code" href="#" target="_blank"># vue</a>
                       <a class="sec-btn" href="#" target="_blank">click me</a>
                     </div>
                   </div>
@@ -321,7 +324,7 @@
                     <div class="sec-img"></div>
                     <div class="content">
                       <p class="sec-explain">해당 내용 설명</p>
-                      <a href="#" target="_blank"># vue</a>
+                      <a  class="code" href="#" target="_blank"># vue</a>
                       <a class="sec-btn" href="#" target="_blank">click me</a>
                     </div>
                   </div>
@@ -332,7 +335,7 @@
                     <div class="sec-img"></div>
                     <div class="content">
                       <p class="sec-explain">해당 내용 설명</p>
-                      <a href="#" target="_blank"># vue</a>
+                      <a  class="code" href="#" target="_blank"># vue</a>
                       <a class="sec-btn" href="#" target="_blank">click me</a>
                     </div>
                   </div>
